--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <link rel="stylesheet" href="style-resets.css">
   <link rel="stylesheet" href="styles.css">
   <!-- Import fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Font1&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Font2&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="fonts/webfont/opensans.css">
 </head>
-<body>
+<body class="scrollable">
   <header>
     <div class="logo">Logo</div>
     <button id="theme-toggle">Toggle Theme</button>
@@ -24,18 +23,18 @@
     <p>Praesent fermentum velit at diam maximus varius. Pellentesque at diam ornare, malesuada leo consectetur, accumsan orci. Ut sodales auctor erat ut sodales. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer vestibulum erat id leo laoreet, eu feugiat diam fringilla. Ut malesuada auctor eros, vel interdum nunc. In convallis, tortor at lobortis lacinia, velit risus interdum mauris, et molestie lacus justo nec nibh. Praesent dictum augue semper venenatis egestas. Etiam est nulla, egestas quis laoreet a, ultrices vel felis. Nullam eu tincidunt massa.</p>
 
     <h3>Heading 3</h3>
-    <p>Donec tincidunt ut purus eu scelerisque. Donec convallis viverra congue. Phasellus vulputate metus leo, quis tristique quam rutrum ac. Nunc in quam sed neque pulvinar finibus vitae vel est. Cras ut imperdiet urna. Suspendisse varius velit posuere metus molestie facilisis. Sed non erat non turpis posuere convallis. Praesent dapibus nisi quis augue aliquam, ut laoreet enim fringilla. Phasellus quis lectus massa. Pellentesque sapien odio, auctor vitae pretium scelerisque, accumsan dictum enim. Praesent fermentum nulla ut scelerisque varius. Nulla facilisi. Morbi ac nibh posuere ligula sodales sagittis. Suspendisse ut consequat nunc, id varius purus. Nunc ac commodo ante. Duis aliquet dapibus volutpat.</p>
+    <p>He aquí un texto en español para probar la compatibilidad de la fuente. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a congue neque, at tempus massa. Curabitur cursus odio id fermentum ornare. In finibus eget est non sagittis. Suspendisse in dolor et purus lacinia finibus. Phasellus porttitor, metus in maximus consectetur, leo velit finibus dolor, nec lobortis libero turpis eu ante. Nulla vitae porta nisi. Cras aliquet, lorem quis pulvinar faucibus, justo ipsum auctor enim, eget blandit sapien dui ut metus.</p>
 
     <h4>Heading 4</h4>
-    <p>Fusce eget felis sed turpis dignissim fermentum ac vel tellus. Aenean vitae ullamcorper dui, ac rhoncus elit. Donec vitae nunc at mauris imperdiet rutrum vel sodales mi. Mauris rutrum est non felis rhoncus finibus ut posuere dolor. Nulla facilisi. Quisque blandit orci vel neque efficitur viverra. Maecenas vehicula erat ac sapien aliquet, vel tristique augue mollis. Quisque fermentum risus id tempus posuere. Cras magna turpis, aliquam a fermentum in, finibus eget velit. Sed luctus aliquam ex eget viverra. Sed rhoncus mollis facilisis.</p>
+    <p>Voici un texte en français pour tester la compatibilité de la police. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a congue neque, at tempus massa. Curabitur cursus odio id fermentum ornare. In finibus eget est non sagittis. Suspendisse in dolor et purus lacinia finibus. Phasellus porttitor, metus in maximus consectetur, leo velit finibus dolor, nec lobortis libero turpis eu ante. Nulla vitae porta nisi. Cras aliquet, lorem quis pulvinar faucibus, justo ipsum auctor enim, eget blandit sapien dui ut metus.</p>
 
     <h5>Heading 5</h5>
-    <p>Sed et laoreet metus, tristique gravida diam. Integer ultrices facilisis est nec accumsan. Integer tincidunt risus felis, in vulputate felis ultricies eget. Donec ac sapien placerat, pulvinar ante ultrices, dictum odio. Nam in ex tempus, egestas orci et, elementum lectus. In eu sem quam. Maecenas dapibus id velit ornare pharetra. Aliquam blandit justo sit amet nisl consectetur rhoncus. Vestibulum neque erat, viverra in diam id, bibendum porta dui. Curabitur tortor nibh, eleifend nec eleifend eget, posuere eget justo. Integer a pulvinar felis. Nulla viverra eros sed sem congue, eu molestie augue bibendum.</p>
+    <p>Hier ist ein Text auf Deutsch, um die Schriftkompatibilität zu testen. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a congue neque, at tempus massa. Curabitur cursus odio id fermentum ornare. In finibus eget est non sagittis. Suspendisse in dolor et purus lacinia finibus. Phasellus porttitor, metus in maximus consectetur, leo velit finibus dolor, nec lobortis libero turpis eu ante. Nulla vitae porta nisi. Cras aliquet, lorem quis pulvinar faucibus, justo ipsum auctor enim, eget blandit sapien dui ut metus.</p>
 
     <h6>Heading 6</h6>
-    <p>Morbi efficitur ex a odio condimentum mollis. Aliquam hendrerit auctor scelerisque. Phasellus sit amet ultricies est. Ut eget dui convallis, semper sapien et, lacinia arcu. Vivamus eros risus, porttitor vitae fermentum ac, auctor vel felis. Cras egestas quis nisl quis auctor. Cras sem mi, rutrum ut congue at, molestie in libero. Suspendisse potenti. Praesent vulputate cursus arcu, sit amet commodo nunc accumsan id. Praesent libero augue, sagittis at mi vel, viverra lobortis velit. Maecenas suscipit aliquam gravida. Ut in lectus sit amet lectus mollis dictum eu eget eros. Integer ut consequat erat.</p>
+    <p>这里有一段中文文本，用于测试字体兼容性。Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a congue neque, at tempus massa. Curabitur cursus odio id fermentum ornare. In finibus eget est non sagittis. Suspendisse in dolor et purus lacinia finibus. Phasellus porttitor, metus in maximus consectetur, leo velit finibus dolor, nec lobortis libero turpis eu ante. Nulla vitae porta nisi. Cras aliquet, lorem quis pulvinar faucibus, justo ipsum auctor enim, eget blandit sapien dui ut metus.</p>
 
-    <p>Phasellus lacinia venenatis fringilla. Morbi eu eros ac enim commodo pharetra at vel lorem. Etiam aliquet nunc maximus orci vestibulum malesuada. Vestibulum aliquet dignissim sem, in molestie mauris bibendum elementum. Curabitur finibus velit nibh, a mattis est fringilla eget. Morbi faucibus libero neque, quis maximus turpis pulvinar ut. Duis non aliquet nisl. Pellentesque mollis augue sed enim lacinia sodales nec bibendum magna.</p>
+    <p>ここに日本語のテキストがあります。フォントの互換性をテストするためのものです。Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a congue neque, at tempus massa. Curabitur cursus odio id fermentum ornare. In finibus eget est non sagittis. Suspendisse in dolor et purus lacinia finibus. Phasellus porttitor, metus in maximus consectetur, leo velit finibus dolor, nec lobortis libero turpis eu ante. Nulla vitae porta nisi. Cras aliquet, lorem quis pulvinar faucibus, justo ipsum auctor enim, eget blandit sapien dui ut metus。</p>
 
     <!-- HTML elements for testing CSS -->
     <h1>HTML Elements</h1>
@@ -119,6 +118,15 @@
       <input type="submit" value="Submit">
     </form>
     <button>Button</button>
+
+    <div class="scrollable demo-scroll">
+      <p>这是一个用于测试字体兼容性的中文文本。Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a congue neque, at tempus massa. Curabitur cursus odio id fermentum ornare. In finibus eget est non sagittis. Suspendisse in dolor et purus lacinia finibus. Phasellus porttitor, metus in maximus consectetur, leo velit finibus dolor, nec lobortis libero turpis eu ante. Nulla vitae porta nisi. Cras aliquet, lorem quis pulvinar faucibus, justo ipsum auctor enim, eget blandit sapien dui ut metus.</p>
+      <p>Это текст на русском языке для проверки совместимости шрифтов. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a congue neque, at tempus massa. Curabitur cursus odio id fermentum ornare. In finibus eget est non sagittis. Suspendisse in dolor et purus lacinia finibus. Phasellus porttitor, metus in maximus consectetur, leo velit finibus dolor, nec lobortis libero turpis eu ante. Nulla vitae porta nisi. Cras aliquet, lorem quis pulvinar faucibus, justo ipsum auctor enim, eget blandit sapien dui ut metus.</p>
+      <p>이것은 글꼴 호환성을 테스트하기 위한 한국어 텍스트입니다. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a congue neque, at tempus massa. Curabitur cursus odio id fermentum ornare. In finibus eget est non sagittis. Suspendisse in dolor et purus lacinia finibus. Phasellus porttitor, metus in maximus consectetur, leo velit finibus dolor, nec lobortis libero turpis eu ante. Nulla vitae porta nisi. Cras aliquet, lorem quis pulvinar faucibus, justo ipsum auctor enim, eget blandit sapien dui ut metus.</p>
+      <p>Este é um texto em português para testar a compatibilidade da fonte. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a congue neque, at tempus massa. Curabitur cursus odio id fermentum ornare. In finibus eget est non sagittis. Suspendisse in dolor et purus lacinia finibus. Phasellus porttitor, metus in maximus consectetur, leo velit finibus dolor, nec lobortis libero turpis eu ante. Nulla vitae porta nisi. Cras aliquet, lorem quis pulvinar faucibus, justo ipsum auctor enim, eget blandit sapien dui ut metus.</p>
+      <p>यह फ़ॉन्ट संगतता का परीक्षण करने के लिए हिंदी में एक पाठ है। Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a congue neque, at tempus massa. Curabitur cursus odio id fermentum ornare. In finibus eget est non sagittis. Suspendisse in dolor et purus lacinia finibus. Phasellus porttitor, metus in maximus consectetur, leo velit finibus dolor, nec lobortis libero turpis eu ante. Nulla vitae porta nisi. Cras aliquet, lorem quis pulvinar faucibus, justo ipsum auctor enim, eget blandit sapien dui ut metus.</p>
+      <p>Dies ist ein Text auf Deutsch, um die Schriftkompatibilität zu testen. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a congue neque, at tempus massa. Curabitur cursus odio id fermentum ornare. In finibus eget est non sagittis. Suspendisse in dolor et purus lacinia finibus. Phasellus porttitor, metus in maximus consectetur, leo velit finibus dolor, nec lobortis libero turpis eu ante. Nulla vitae porta nisi. Cras aliquet, lorem quis pulvinar faucibus, justo ipsum auctor enim, eget blandit sapien dui ut metus.</p>
+    </div>
   </main>
 
   <footer>
