--- a/extrinsics.html
+++ b/extrinsics.html
@@ -26,8 +26,8 @@
     </div>
   </header>
 
-  <main class="pagewidth">
-    <h2>Home page</h2>
+  <main class="extrinsics-page pagewidth">
+    <h2>Extrinsics</h2>
   </main>
 
   <footer>
