--- a/new-multisig.html
+++ b/new-multisig.html
@@ -26,8 +26,38 @@
     </div>
   </header>
 
-  <main class="pagewidth">
-    <h2>Home page</h2>
+  <main class="new-multisig-page pagewidth">
+    <h2>New Multisig</h2>
+    <div class="input-group">
+      <label for="threshold">Threshold (2/0)</label>
+      <input type="text" id="threshold" placeholder="2">
+      <label for="multisig-name">Name</label>
+      <input type="text" id="multisig-name" placeholder="Multisig name">
+    </div>
+
+    <div class="side-by-side-container">
+      <div class="side-item">
+        <h3>Available signatories (3)</h3>
+        <div class="side-item-content">
+          <div class="multisig-account">
+            <h4>Demo Account</h4>
+            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+          </div>
+          <div class="multisig-account">
+            <h4>Test Account 1</h4>
+            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+          </div>
+          <div class="multisig-account">
+            <h4>Test Account 2</h4>
+            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+          </div>
+        </div>
+      </div>
+      <div class="side-item">
+        <h3>Selected signatories (0)</h3>
+        <div class="side-item-content"></div>
+      </div>
+    </div>
   </main>
 
   <footer>
