--- a/accounts.html
+++ b/accounts.html
@@ -21,7 +21,7 @@
 <body class="scrollable">
   <header>
     <div class="header-wrapper pagewidth">
-      <div class="logo">Logo</div>
+      <div class="logo"><a href="index.html">Logo</a></div>
       <button id="theme-toggle">Toggle Theme</button>
     </div>
   </header>
