--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 <body class="scrollable">
   <header>
     <div class="header-wrapper pagewidth">
-      <div class="logo">Logo</div>
+      <div class="logo"><a href="index.html">Logo</a></div>
       <button id="theme-toggle">Toggle Theme</button>
     </div>
   </header>
 
   <main class="pagewidth">
     <h2>Home page</h2>
+    <a href="demos.html">Demos page</a>
   </main>
 
   <footer>
