--- a/new-multisig.html
+++ b/new-multisig.html
@@ -51,6 +51,30 @@
             <h4>Test Account 2</h4>
             <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
           </div>
+          <div class="multisig-account">
+            <h4>Test Account 3</h4>
+            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+          </div>
+          <div class="multisig-account">
+            <h4>Test Account 4</h4>
+            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+          </div>
+          <div class="multisig-account">
+            <h4>Test Account 5</h4>
+            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+          </div>
+          <div class="multisig-account">
+            <h4>Test Account 6</h4>
+            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+          </div>
+          <div class="multisig-account">
+            <h4>Test Account 7</h4>
+            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+          </div>
+          <div class="multisig-account">
+            <h4>Test Account 8</h4>
+            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+          </div>
         </div>
       </div>
       <div class="side-item">
