--- a/extrinsics.html
+++ b/extrinsics.html
@@ -21,24 +21,36 @@
 <body class="scrollable">
   <header>
     <div class="header-wrapper pagewidth">
-      <div class="logo"><a href="index.html">Logo</a></div>
-      <button id="theme-toggle">Toggle Theme</button>
+      <div class="logo">
+        <a href="index.html">Logo</a>
+      </div>
+      <div class="navigation">
+        <nav>
+          <a href="new-multisig.html">New Multisig</a>
+          <a href="multisig-accounts.html">Multisig Accounts</a>
+          <a href="accounts.html">Accounts</a>
+          <a href="address-book.html">Address Book</a>
+          <a class="selected" href="extrinsics.html">Extrinsics</a>
+        </nav>
+      </div>
+      <div class="options">
+        <button id="theme-toggle">Toggle Theme</button>
+      </div>
     </div>
   </header>
 
   <main class="extrinsics-page pagewidth">
-    <h2>Extrinsics</h2>
   </main>
 
-  <footer>
+  <!-- <footer>
     <nav>
       <a href="new-multisig.html">New Multisig</a>
       <a href="multisig-accounts.html">Multisig Accounts</a>
       <a href="accounts.html">Accounts</a>
       <a href="address-book.html">Address Book</a>
-      <a href="extrinsics.html">Extrinsics</a>
+      <a class="selected" href="extrinsics.html">Extrinsics</a>
     </nav>
-  </footer>
+  </footer> -->
 
   <script src="script.js"></script>
 </body>
