--- a/address-book.html
+++ b/address-book.html
@@ -34,15 +34,26 @@
         </nav>
       </div>
       <div class="options">
-        <button id="theme-toggle">Toggle Theme</button>
+        <div class="theme-toggle-wrapper">
+          <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark/light mode">
+            <span class="toggle-track">
+              <span class="toggle-indicator"></span>
+            </span>
+          </button>
+        </div>
       </div>
     </div>
   </header>
 
-  <main class="address-book-page pagewidth">
-    <div class="content">
-      <div class="accounts-account-list-container scrollable">
-        <button style="width: 200px; height: 40px;">+ Add contact</button>
+  <main class="address-book-page">
+    <div class="page-header">
+      <div class="header-container pagewidth">
+        <h3>Add a new contact address</h3>
+        <button class="button-secondary">+ Add contact</button>
+      </div>
+    </div>
+    <div class="content pagewidth scrollable">
+      <div class="accounts-account-list-container">
         <div class="account-list-item">
           <p class="account-name">Demo account</p>
           <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
