--- a/multisig-accounts.html
+++ b/multisig-accounts.html
@@ -34,13 +34,19 @@
         </nav>
       </div>
       <div class="options">
-        <button id="theme-toggle">Toggle Theme</button>
+        <div class="theme-toggle-wrapper">
+          <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark/light mode">
+            <span class="toggle-track">
+              <span class="toggle-indicator"></span>
+            </span>
+          </button>
+        </div>
       </div>
     </div>
   </header>
 
-  <main class="multisig-accounts-page pagewidth">
-    <div class="content">
+  <main class="multisig-accounts-page">
+    <div class="content pagewidth">
       <div class="side-by-side-container">
         <div class="side-by-side accounts-list scrollable">
           <div class="account selected">
